	* src/rcfile.c (parse_header_exp, parse_magic_exp, grab_and_store):
	Use the now correct parsing of header regexes also for parsing magic
	regexes.  This fixes Savannah bug #47292 and saves 50 lines of code.
	* src/rcfile.c (grab_and_store): Rename a variable and densify.
	* src/rcfile.c (grab_and_store): Do not drop regexes that were
	gathered earlier.  This fixes Savannah bug #47285.

2016-02-26  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/nanorc.5, doc/texinfo/nano.texi, doc/syntax/nanorc.nanorc,
	doc/nanorc.sample.in: Correct the description of 'justifytrim', add
	it to the Info document, sort it, and tweak a wording.
	* src/color.c (color_update): Look for a default syntax only when
	all else failed -- forego the small, complicating optimization.
	* src/color.c (color_update): Strip things bare to see the sameness.
	* src/color.c (found_in_list): Factor out this triple repetition.
	* src/color.c (color_update): Rename a variable for conciseness.
	* src/color.c (nfreeregex): Elide this function, now used just once.
	* src/nano.h: Rename a struct element for aptness and contrast.
	* src/nano.h: Rename another element, because it refers not just
	to file extensions, but also to header lines and magic strings.

GNU nano 2.5.3 - 2016.02.25

2016-02-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_browser): Plug a memory leak by not copying
	a string twice.  This fixes Savannah bug #47206.
	* src/browser.c (do_browser): Now put things in the proper order.
	* src/files.c (make_new_buffer), src/nano.c (splice_opennode): Elide
	the latter function, by handling the two cases (the creation of the
	first element, and the insertion of a new element) directly.

2016-02-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/prompt.c (do_statusbar_output, do_statusbar_delete):
	Rename a variable, for contrast and correctness.
	* src/cut.c (do_copy_text): Don't move the cursor when copying a